--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -8,7 +8,7 @@
         background-color: $color-grey-light-1;
         grid-column: col-start 5 / full-end;
         
-        padding: 6rem 12rem;
+        padding: 6rem 8vw;
         // center with flex - why ? layout is one dimensional
         // display: flex;
         // flex-direction: column;
